<resources>
    <string name="app_name">Deblift</string>
    <string name="database_name">deblift_db</string>

    <string name="title_profile">Profile</string>
    <string name="title_history">History</string>
    <string name="title_workout">Workout</string>
    <string name="title_exercises">Exercises</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Enter text to search</string>
    <string name="empty_workout">Empty Workout</string>


    <string name="history_workout_name">Workout Name Sample</string>
    <string name="history_workout_date">19 Sep 2019</string>
    <string name="history_workout_exercises">Exercises</string>
    <string name="history_workout_best_set">Best Set</string>

    <string name="quick_start">Quick start</string>
    <string name="start_empty_workout">Start an empty workout</string>
    <string name="my_routines">My routines</string>


    <string name="set">Set</string>
    <string name="previous">Previous</string>
    <string name="weight_unit">kg</string>
    <string name="reps">Reps</string>
    <string name="empty_divider">-</string>
    <string name="add_set">Add Set</string>
    <string name="add_exercise">Add exercise</string>
    <string name="cancel_workout">Cancel Workout</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="new_workout_template">New Workout Template</string>
    <string name="start_workout">Start Workout</string>
    <string name="exerciseName">Exercise</string>
    <string name="muscle_group">Muscle Group</string>
    <string name="exercise_instructions">Instructions</string>

    <string name="last_performed">Last performed:</string>


    <string name="toolbar_finnish">Finnish</string>
    <string name="toolbar_save">Save</string>

    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_duplicate">Duplicate</string>
    <string name="menu_remove">Remove</string>

    <string name="test">18dp</string>
    <string name="exercise_description_delimiter">;</string>

    <string name="profile_date">Date</string>
    <string name="profile_student">Student</string>
    <string name="profile_class">Class</string>
    <string name="profile_year">Year:</string>

    <!-- INFO -->
    <string name="my_name">Michal Debski</string>
    <string name="current_date">10/12/2019</string>
    <string name="my_class">DT211C</string>
    <string name="my_year">3rd</string>


    <!-- Dialog -->
    <string name="discard_workout">Discard Workout?</string>
    <string name="discard_workout_msg">Are you sure you want to discard this workout? This cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>

    <string name="workout_finished">Are you finished?</string>
    <string name="workout_finished_msg">All invalid/empty sets will be discarded. All sets with valid data will be automatically marked as complete.</string>
    <string name="finish_workout">Finish Workout</string>

    <string name="workout_in_progress">Workout in progress</string>
    <string name="workout_in_progress_msg">You are currently performing a workout. Would you like to discard it?</string>



</resources>
