<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_clock_black_24dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_workouts"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/title_workout" />
    <item
        android:id="@+id/navigation_exercises"
        android:icon="@drawable/ic_dumbbell_black_24dp"
        android:title="@string/title_exercises" />

</menu>
